increased spring boot version to 3.4 and java to 21 + remove querydsl